
[workspace]
members = ["contracts/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
cosmwasm-schema = "1.3"
cosmwasm-std =  { version = "1.3", features = ["staking"] }
cosmwasm-storage = "1.3"
cw-storage-plus = "1.1"
cw-utils = "1.0"
cw2 = "1.1"
cw4 = "1.1"
cw20-base = "1.1"
cw20 = "1.1"
cw721-base = "0.18"
cw-controllers = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
chrono = "0.4"
anyhow = "1.0"
cw-multi-test = "0.16"

[profile.release.package.lottery]
codegen-units = 1
incremental = false

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
panic = 'abort'