
[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
base64ct = { version = "1.5", features = ["alloc"] }
chrono = "0.4"
cosmwasm-schema = "1.3"
cosmwasm-std =  { version = "1.3", features = ["staking", "cosmwasm_1_2"] }
cosmwasm-storage = "1.3"
cw-storage-plus = "1.1"
cw-utils = "1.0"
cw2 = "1.1"
cw4 = "1.1"
cw20-base = { version = "1.1", features = ["library"] }
cw20 = "1.1"
cw721 = "0.18"
cw721-base = { version = "0.18", features = ["library"] }
cw-controllers = "1.1"
cw-multi-test = "0.16"
hex-literal = "0.4"
schemars = "0.8"
sha2 = "0.10"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }


[profile.release.package.platform]
codegen-units = 1
incremental = false

[profile.release.package.lottery]
codegen-units = 1
incremental = false

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
panic = 'abort'